crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__01_attenuation_at_call.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    3,
                ),
                cap_type: "Fuel",
                required_mask: 3,
                actual_mask: 1,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`v3` has `Fuel` authority {burn} but call site requires {burn, query} (missing: {query})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 680,
                            end: 699,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
