crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__100_refinement_guards_cap_sink.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    5,
                ),
                cap_type: "Fuel",
                required_mask: 3,
                actual_mask: 3,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`drawn` has `Fuel` authority {burn, query} but call site requires {burn, query} (missing: {(none)})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1271,
                            end: 1288,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
