crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__101_dbc0_narrowed_then_assigned.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T211"]>
