crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__20_deadline_subtyping.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T195"]>
